# libgeo

./: .gitignore  CMakeLists.txt
include/data_structure/: comparator.h  hash.h  optional.h  priority_queue.h  red_black_tree.h  sort.h  util.h  vector.h
include/geometry/: util.h
include/geometry/structure/: line.h  point.h  segment.h
src/data_structure/: CMakeLists.txt  hash.c  priority_queue.c  red_black_tree.c  sort.c  vector.c
src/geometry/: CMakeLists.txt
src/geometry/structure/: CMakeLists.txt  line.c  point.c  segment.c
test/: CMakeLists.txt
test/data_structure/: CMakeLists.txt  hash.cpp  priority_queue.cpp  red_black_tree.cpp  sort.cpp  vector.cpp
test/geometry/: CMakeLists.txt
test/geometry/structure/: CMakeLists.txt  point.cpp  segment.cpp
